--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@
 # ============================================================================
 # Descrição: Todas as dependências necessárias para o pipeline
 # Python Version: 3.9+
+# Autor: Rafael (rafarpl)
+# Data: 2024
 # ============================================================================
 
 # ====================
@@ -29,34 +31,35 @@ pyarrow==14.0.1
 # ====================
 # PostgreSQL
 psycopg2-binary==2.9.9
-SQLAlchemy==2.0.23
+sqlalchemy==2.0.23
 
 # Redis
 redis==5.0.1
+hiredis==2.2.3
 
 # ====================
 # API & HTTP
 # ====================
 requests==2.31.0
 urllib3==2.1.0
+httpx==0.25.2
 
 # ====================
-# AIRFLOW
+# MESSAGING
 # ====================
-apache-airflow==2.8.0
-apache-airflow-providers-apache-spark==4.5.0
-apache-airflow-providers-postgres==5.9.0
-apache-airflow-providers-redis==3.5.0
-apache-airflow-providers-http==4.7.0
+# Kafka
+confluent-kafka==2.3.0
+kafka-python==2.0.2
 
 # ====================
-# AWS/S3/MinIO
+# STORAGE
 # ====================
+# MinIO / S3
 boto3==1.34.10
-s3fs==2024.2.0
+minio==7.2.0
 
 # ====================
-# MONITORING
+# MONITORING & OBSERVABILITY
 # ====================
 # Prometheus
 prometheus-client==0.19.0
@@ -64,85 +67,88 @@ prometheus-client==0.19.0
 # Logging
 python-json-logger==2.0.7
 
-# ====================
-# GEOSPATIAL
-# ====================
-# Geocoding
-geopy==2.4.1
-Shapely==2.0.2
+# OpenTelemetry
+opentelemetry-api==1.22.0
+opentelemetry-sdk==1.22.0
+opentelemetry-instrumentation==0.43b0
 
 # ====================
 # DATA QUALITY
 # ====================
 great-expectations==0.18.8
+pandera==0.17.2
 
 # ====================
-# TESTING
+# GEOSPATIAL
 # ====================
-pytest==7.4.3
-pytest-cov==4.1.0
-pytest-mock==3.12.0
-pytest-asyncio==0.21.1
-pytest-xdist==3.5.0
-
-# ====================
-# CODE QUALITY
-# ====================
-black==23.12.1
-flake8==7.0.0
-mypy==1.8.0
-pylint==3.0.3
-isort==5.13.2
-
-# ====================
-# DOCUMENTATION
-# ====================
-Sphinx==7.2.6
-sphinx-rtd-theme==2.0.0
+shapely==2.0.2
+geopandas==0.14.1
+geopy==2.4.1
 
 # ====================
 # UTILITIES
 # ====================
+# Date/Time
 python-dateutil==2.8.2
 pytz==2023.3
-click==8.1.7
-tabulate==0.9.0
-tqdm==4.66.1
+
+# Retry & Circuit Breaker
+tenacity==8.2.3
+pybreaker==1.0.1
+
+# Validation
+cerberus==1.3.5
+jsonschema==4.20.0
 
 # ====================
-# DEVELOPMENT
+# DEVELOPMENT & TESTING
 # ====================
-ipython==8.19.0
+pytest==7.4.3
+pytest-cov==4.1.0
+pytest-asyncio==0.21.1
+pytest-mock==3.12.0
+pytest-xdist==3.5.0
+
+# Code Quality
+black==23.12.1
+isort==5.13.2
+flake8==6.1.0
+pylint==3.0.3
+mypy==1.7.1
+
+# Pre-commit
+pre-commit==3.6.0
+
+# ====================
+# DOCUMENTATION
+# ====================
+sphinx==7.2.6
+sphinx-rtd-theme==2.0.0
+
+# ====================
+# JUPYTER
+# ====================
 jupyter==1.0.0
-jupyterlab==4.0.10
+jupyterlab==4.0.9
+notebook==7.0.6
+ipykernel==6.27.1
+
+# Visualization
+matplotlib==3.8.2
+seaborn==0.13.0
+plotly==5.18.0
 
 # ====================
-# OPTIONAL
+# AIRFLOW (opcional - geralmente instalado separadamente)
 # ====================
-# Kafka (se usar streaming real)
- kafka-python==2.0.2
+# apache-airflow==2.8.0
+# apache-airflow-providers-apache-spark==4.5.0
+# apache-airflow-providers-postgres==5.9.0
+# apache-airflow-providers-redis==3.5.0
 
-# Trino (se usar para queries distribuídas)
- trino==0.328.0
-
-# ============================================================================
-# INSTALLATION INSTRUCTIONS
-# ============================================================================
-# 
-# Development:
-#   pip install -r requirements.txt
-#
-# Production (sem dev tools):
-#   pip install -r requirements.txt --no-dev
-#
-# Docker:
-#   RUN pip install --no-cache-dir -r requirements.txt
-#
-# ============================================================================
-
-
-
-pandas
-requests
-pyyaml
-python-pptx
+# ====================
+# OPTIONAL - Machine Learning (se necessário)
+# ====================
+# scikit-learn==1.3.2
+# xgboost==2.0.3
+# lightgbm==4.1.0
